src/main/paradox/docs/getting-started/running-nexus/minikube/zookeeper.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: zookeeper
    namespace: nexus
    labels:
      app: zookeeper
      group: infra
  spec:
    ports:
    - port: 2181
      name: client
    - port: 2888
      name: server
    - port: 3888
      name: leader-election
    type: ClusterIP
    clusterIP: None
    selector:
      app: zookeeper
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    name: zookeeper
    namespace: nexus
    labels:
      app: zookeeper
      group: infra
  spec:
    serviceName: zookeeper
    selector:
      matchLabels:
        app: zookeeper
    replicas: 1
    template:
      metadata:
        namespace: nexus
        labels:
          app: zookeeper
          group: infra
      spec:
        containers:
        - name: zookeeper
          image: gcr.io/google_samples/k8szk:v3
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: storage
            mountPath: /var/lib/zookeeper
          command:
          - sh
          - -c
          - zkGenConfig.sh && zkServer.sh start-foreground
          ports:
          - containerPort: 2181
            name: client
          - containerPort: 2888
            name: server
          - containerPort: 3888
            name: leader-election
          resources:
            limits:
              cpu: "500m"
              memory: "500Mi"
            requests:
              cpu: "200m"
              memory: "500Mi"
          readinessProbe:
            exec:
              command:
              - "zkOk.sh"
            initialDelaySeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            exec:
              command:
              - "zkOk.sh"
            initialDelaySeconds: 10
            timeoutSeconds: 5
    volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        storageClassName: standard
        accessModes: [ ReadWriteOnce ]
        resources:
          requests:
            storage: 500Mi
