src/main/paradox/docs/getting-started/running-nexus/minikube/admin.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: admin
    namespace: nexus
    labels:
      app: admin
      group: service
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: admin
      group: service
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: admin-hd
    namespace: nexus
    labels:
      app: admin
      group: service
  spec:
    ports:
    - name: remoting
      port: 2552
      protocol: TCP
      targetPort: 2552
    - name: prometheus
      port: 9095
      protocol: TCP
      targetPort: 9095
    selector:
      app: admin
      group: service
    clusterIP: None
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    name: admin
    namespace: nexus
    labels:
      app: admin
      group: service
  spec:
    replicas: 1
    serviceName: admin-hd
    selector:
      matchLabels:
        app: admin
    template:
      metadata:
        namespace: nexus
        labels:
          app: admin
          group: service
      spec:
        containers:
        - name: admin
          image: bluebrain/nexus-admin:1.2
          imagePullPolicy: Always
          command:
          - '/bin/bash'
          - '-c'
          - '/opt/docker/bin/admin -Doverride.remoting.interface=$REMOTING_INTERFACE.admin-hd.nexus.svc.cluster.local'
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 2552
            name: remoting
            protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            failureThreshold: 5
            successThreshold: 1
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: remoting
            failureThreshold: 30
            successThreshold: 1
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
        dnsPolicy: ClusterFirst
        terminationGracePeriodSeconds: 30
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    name: admin
    namespace: nexus
  spec:
    rules:
    - http:
        paths:
        - backend:
            serviceName: admin
            servicePort: 8080
          path: /v1/orgs
        - backend:
            serviceName: admin
            servicePort: 8080
          path: /v1/projects
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$2
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    name: admin-direct
    namespace: nexus
  spec:
    rules:
    - http:
        paths:
        - backend:
            serviceName: admin
            servicePort: 8080
          path: /admin(/|$)(.*)
